--- a/fertilizesop/Properties/Resources.resx
+++ b/fertilizesop/Properties/Resources.resx
@@ -127,4 +127,7 @@
   <data name="Fertilizer Shop Logo Design-Photoroom" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Fertilizer Shop Logo Design-Photoroom.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="logo for car" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logo for car.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
